Fix bugs caused by List.of in WordTest